--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,7 +13,9 @@ jobs:
     if: github.event.action == 'opened'
     name: Check for Change Request & Jira IDs provided in PR description
     uses: jgmeet/jira-integration/.github/workflows/merge-check.yml@main
-    secrets: inherit
+    secrets:
+      EMAIL: ${{ secrets.EMAIL }}
+      API_TOKEN: ${{ secrets.API_TOKEN }}
 
   add-comments:
     if: github.event.pull_request.merged == true
