--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,7 +13,7 @@ jobs:
     if: github.event.action == 'opened'
     name: Check for Change Request & Jira IDs provided in PR description
     uses: jgmeet/jira-integration/.github/workflows/merge-check.yml@main
-    secrets:
+    with:
       EMAIL: ${{ secrets.EMAIL }}
       API_TOKEN: ${{ secrets.API_TOKEN }}
 
